--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ install: "pip install -r requirements.txt"
 
 script: "coverage run --source dnsimple2/ -m unittest"
   
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
