--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-cached-property==1.3.0
-coverage==4.3.1
-dateutils==0.6.6
-requests==2.12.4
+cached-property==1.3.1
+coverage==4.4.1
+python-dateutil==2.6.1
+requests==2.18.4
