--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 
 install: "pip install -r requirements.txt"
 
-script: "coverage run --source dnsimple2/ -m unittest"
+script: "coverage run -m unittest discover"
   
 
 after_success:
