--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ python:
   - "pypy"
   - "pypy3"
 
+cache: pip
+
 install: "pip install -r requirements.txt"
 
 script: "coverage run -m unittest discover"
